--- a/index.html
+++ b/index.html
@@ -7,23 +7,31 @@
     <meta name="author" content="Chris Hajduk">
 	
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+	<link rel="stylesheet" href="style.css">
 	
 	<title>Kardashev Scale</title>
 </head>
 
-<body class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+<body class="">
 
-	<div class="container-fluid px-3">
-	<h1>Type 0.7 Civilization</h1>
+	<div class="container-fluid text-center" style="height:100vh; width:100vw;">
+		<span class="align-middle elem-to-center">
+			<h1>Type 0.7 Civilization</h1>
+		</span>
 	</div>
 
-	<div class="container-fluid">
-	Leaderboards
+	<hr class="default-background" />
+	
+	<div class="container-fluid" style="background-color:green;">
+		<h1>Leaderboard</h1>
 	</div>
 
-
-	<div class="container-fluid">
-	Future Predictions
+	<hr class="default-background" />
+	
+	<div class="container-fluid" style="background-color:gray;">
+		<h1>Future Predictions</h1>
+		<label for="dateRange" class="form-label">Year</label>
+		<input type="range" class="form-range" id=dateRange" min="1970" max="2100" step="1" value="2023" />
 	</div>
 
 
